<resources>
    <string name="app_name">NavigationDrawePlayground2</string>
    <string name="navigation_drawer_open"> Open Navigation drawer</string>
    <string name="navigation_drawer_close"> Close Navigation drawer</string>
    <string name="bench_press">Bench Press</string>
    <string name="squat">Squat</string>
    <string name="deadlift">Deadlift</string>
    <string name="overhead_press">Overhead Press</string>
    <string name="kg">kg</string>
    <string name="training_max">Training Max</string>
    <string name="save_training_max">Save TM</string>
    <string name="main_sets">Main sets</string>
    <string name="one_by_five">1 x 5</string>
    <string name="one_by_five_plus">1 x 5+</string>
    <string name="one_by_three">1 x 3</string>
    <string name="one_by_three_plus">1 x 3+</string>
    <string name="one_by_one_plus">1 x 1+</string>
    <string name="daily_routine">Dagens pass</string>
    <string name="training_of_the_day">Training of the day</string>
    <string name="fsl_sets">FSL sets</string>
    <string name="week_1">Week 1</string>
    <string name="week_2">Week 2</string>
    <string name="week_3">Week 3</string>
    <string name="day_1">Day 1</string>
    <string name="day_2">Day 2</string>
    <string name="day_3">Day 3</string>
    <string name="percent_65">65%</string>
    <string name="percent_75">75%</string>
    <string name="percent_85">85%</string>
    <string name="percent_70">70%</string>
    <string name="percent_80">80%</string>
    <string name="percent_90">90%</string>
    <string name="percent_95">95%</string>
    <string name="barbell">Barbell Weight</string>
    <string name="fifteen">15 kg</string>
    <string name="twenty">20kg </string>
    <string name="assistance_exercises">Assistance Exercises</string>
</resources>
