<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/headerTextLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/headerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:text="@string/one_rep_max"
            android:textAppearance="@style/HeaderText" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/benchPressLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/headerTextLayout"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/benchPressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:text="@string/bench_press"
            android:textAppearance="@style/NormalText" />

        <EditText
            android:id="@+id/benchPressTextInput"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/benchPressPreferredWeightSuffix"
            android:textAppearance="@style/NormalText" />

        <TextView
            android:id="@+id/benchPressPreferredWeightSuffix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:text="@string/kg"
            android:textAppearance="@style/NormalText"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/squatLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/benchPressLayout"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/squatText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:text="@string/squat"
            android:textAppearance="@style/NormalText" />

        <EditText
            android:id="@+id/squatTextInput"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/squatPreferredWeightSuffix"
            android:textAppearance="@style/NormalText" />

        <TextView
            android:id="@+id/squatPreferredWeightSuffix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:text="@string/kg"
            android:textAppearance="@style/NormalText"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/deadliftLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/squatLayout"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/deadliftText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:text="@string/deadlift"
            android:textAppearance="@style/NormalText" />

        <EditText
            android:id="@+id/deadliftTextInput"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/deadliftPreferredWeightSuffix"
            android:textAppearance="@style/NormalText" />

        <TextView
            android:id="@+id/deadliftPreferredWeightSuffix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:text="@string/kg"
            android:textAppearance="@style/NormalText" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/overheadPressLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/deadliftLayout"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/overheadPressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:text="@string/overhead_press"
            android:textAppearance="@style/NormalText" />

        <EditText
            android:id="@+id/overheadPressTextInput"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/overheadPressPreferredWeightSuffix"
            android:textAppearance="@style/NormalText" />

        <TextView
            android:id="@+id/overheadPressPreferredWeightSuffix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:text="@string/kg"
            android:textAppearance="@style/NormalText" />

    </RelativeLayout>

    <Button
        android:id="@+id/saveOneRepMaxButton"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/overheadPressLayout"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/save_one_rep_max"
        android:textAllCaps="true"
        android:textAppearance="@style/NormalText" />


</RelativeLayout>